--- a/ejercicios_formularios_css/index_formulario.html
+++ b/ejercicios_formularios_css/index_formulario.html
@@ -5,35 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="formulario.css">
     <title>Formulario</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 </head>
 <body>
     <header>
         <div class="header-top"></div>
         <div class="header-bottom"></div>
+        <button id="btn-contrast" class="btn btn-warning fw-bolder">Cambiar Estilos</button>
     </header>
-    <main>
-        <button id="btn-contrast">Cambiar Estilos</button>
-        <h1>Formulario de Contacto</h1>
-        <form id="form">
+    <main class="container">
+        <h1 class="text-center my-5">Formulario de Contacto</h1>
+        <form id="form" class="container col-lg-6 rounded-3">
             <div>
-                <label for="name">Nombre</label>
-                <input type="text" name="name" id="name" placeholder="Martin..." required>
+                <label class="fw-bold" for="name">Nombre</label>
+                <input class="form-control" type="text" name="name" id="name" minlength="3" maxlength="20" placeholder="Martin..." required>
             </div>
             <div>
-                <label for="lastName">Apellido</label>
-                <input type="text" name="lastName" id="lastName" placeholder="Gomez..." required>
+                <label class="fw-bold" for="lastName">Apellido</label>
+                <input class="form-control" type="text" name="lastName" id="lastName" minlength="3" maxlength="20" placeholder="Gomez..." required>
             </div>
             <div>
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" placeholder="tuemail@example.com" required>
+                <label class="fw-bold" for="email">Email</label>
+                <input class="form-control" type="email" name="email" id="email" placeholder="tuemail@example.com" pattern="[^@\s]+@[^@\s]+\.[^@\s]+" required>
             </div>
             <div>
-                <label for="birthDate">Fecha de Nacimiento</label>
-                <input type="date" name="birthDate" id="birthDate" required>
+                <label class="fw-bold" for="birthDate">Fecha de Nacimiento</label>
+                <input class="form-control" type="date" name="birthDate" id="birthDate" required>
             </div>
             <div>
-                <label for="country">Pais</label>
-                <select name="country" id="country">
+                <label class="fw-bold" for="country">Pais</label>
+                <select name="country" id="country" class="form-select">
+                    <option value="" hidden>Selecciona tu pais</option>
                     <option value="argentina">Argentina</option>
                     <option value="brasil">Brasil</option>
                     <option value="chile">Chile</option>
@@ -46,12 +53,17 @@
                     <option value="venezuela">Venezuela</option>
                 </select>
             </div>
-            <input type="submit" value="Enviar" id="btn-submit">
+            <input type="submit" value="Enviar" id="btn-submit" class="btn btn-primary rounded-1">
         </form>
     </main>
     <footer>
 
     </footer>
     <script src="formulario.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
 </body>
 </html>
