--- a/proyecto_duo/index.html
+++ b/proyecto_duo/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- NAVBAR -->
     <header>
-      <nav class="navbar navbar-expand-lg bg-danger-subtle rounded-3">
+      <nav class="navbar navbar-expand-lg bg-primary-subtle rounded-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Proyecto BOOTSTRAP</a>
           <button
