add: seccion de inicio, carrusel e imagenes

--- a/proyecto_duo/pages/perfil.html
+++ b/proyecto_duo/pages/perfil.html
@@ -18,7 +18,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-primary-subtle rounded-3">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Proyecto BOOTSTRAP</a>
+          <a class="navbar-brand" href="../index.html">Proyecto BOOTSTRAP</a>
           <button
             class="navbar-toggler bg-body-tertiary border-0"
             type="button"
@@ -59,18 +59,15 @@
             <div class="card p-3 py-4">
               <div class="text-center">
                 <img
-                  src="https://i.imgur.com/bDLhJiP.jpg"
+                  src="../img/img-main/logoenergy.png"
                   width="100"
-                  class="rounded-circle"
+                  class="rounded-circle bg-black"
                 />
               </div>
 
               <div class="text-center mt-3">
-                <span class="bg-secondary p-1 px-4 rounded text-white"
-                  >Pro</span
-                >
-                <h5 class="mt-2 mb-0">Alexender Schidmt</h5>
-                <span>UI/UX Designer</span>
+                <h5 class="mt-2 mb-0">Energy Sport</h5>
+                <span>Tienda de Productos Deportivos</span>
 
                 <div class="px-4 mt-1">
                   <p class="fonts">
@@ -88,8 +85,7 @@
                 </ul>
 
                 <div class="buttons">
-                  <button class="btn btn-outline-primary px-4">Message</button>
-                  <button class="btn btn-primary px-4 ms-3">Contact</button>
+                  <button class="btn btn-primary-accent">Contáctanos</button>
                 </div>
               </div>
             </div>
