--- a/proyecto_duo/index.html
+++ b/proyecto_duo/index.html
@@ -52,7 +52,280 @@
       </nav>
     </header>
     <!-- ******** -->
+    <section id="carrousel">
+      <div
+        id="carrouselEnergy"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carrouselEnergy"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carrouselEnergy"
+            data-bs-slide-to="1"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carrouselEnergy"
+            data-bs-slide-to="2"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carrouselEnergy"
+            data-bs-slide-to="3"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 4"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <figure class="carousel-item active">
+            <img
+              src="img/img-carr/banner-1.png"
+              class="d-block w-100"
+              alt="Anuncio de nuevas ofertas"
+            />
+          </figure>
+          <figure class="carousel-item">
+            <img
+              src="img/img-carr/banner-2.png"
+              class="d-block w-100"
+              alt="Publicidad de Reebok"
+            />
+          </figure>
+          <figure class="carousel-item">
+            <img
+              src="img/img-carr/banner-3.png"
+              class="d-block w-100"
+              alt="Publicidad de zapatillas de marca Adidas con Messi de patrocinador"
+            />
+          </figure>
+          <figure class="carousel-item">
+            <img
+              src="img/img-carr/banner-4.png"
+              class="d-block w-100"
+              alt="publicidad de conjunto de ropa de marca Adidas"
+            />
+          </figure>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carrouselEnergy"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carrouselEnergy"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
+    </section>
+    <!-- CARROUSEL RESPONSIVE -->
+    <section id="carrouselResponsive">
+      <div
+        id="carrouselEnergyMobile"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carrouselEnergyMobile"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carrouselEnergyMobile"
+            data-bs-slide-to="1"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carrouselEnergyMobile"
+            data-bs-slide-to="2"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carrouselEnergyMobile"
+            data-bs-slide-to="3"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 4"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <figure class="carousel-item active">
+            <img
+              src="img/img-carr/banner-1-responsive.png"
+              class="d-block w-100"
+              alt="Anuncio de nuevas ofertas"
+            />
+          </figure>
+          <figure class="carousel-item">
+            <img
+              src="img/img-carr/banner-2-responsive.png"
+              class="d-block w-100"
+              alt="Publicidad de Reebok"
+            />
+          </figure>
+          <figure class="carousel-item">
+            <img
+              src="img/img-carr/banner-3-responsive.png"
+              class="d-block w-100"
+              alt="Publicidad de zapatillas de marca Adidas con Messi de patrocinador"
+            />
+          </figure>
+          <figure class="carousel-item">
+            <img
+              src="img/img-carr/banner-4-responsive.png"
+              class="d-block w-100"
+              alt="publicidad de conjunto de ropa de marca Adidas"
+            />
+          </figure>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carrouselEnergyMobile"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carrouselEnergyMobile"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
+    </section>
+    <!-- ******** -->
+    <!-- SECCIÓN OFERTAS -->
+    <section class="container">
+      <h3 class="text-center p-3 mb-5 mt-3 text-white fw-bolder">Ofertas</h3>
+      <article class="d-flex column row-md flex-wrap justify-content-evenly">
+        <div class="card col-3 p-1 mb-5 bg-light div1" style="width: 15rem">
+          <img
+            src="img/img-main/top.png"
+            class="card-img-top"
+            alt="Top Salomon Cross Run De Mujer"
+          />
+          <div class="card-body bg-light">
+            <p class="card-text bg-light">Top Salomon Cross Run De Mujer</p>
+            <h5 class="card-title bg-light">$19.999</h5>
 
+            <div class="d-flex justify-content-center bg-light">
+              <a
+                href="#"
+                class="btn btn-outline-info"
+                >Ver más</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="card col-3 p-1 mb-5 bg-light div1" style="width: 15rem">
+          <img
+            src="img/img-main/buzo-fila.png"
+            class="card-img-top"
+            alt="Buzo Fila Letter II de Hombre"
+          />
+          <div class="card-body bg-light">
+            <p class="card-text bg-light">Buzo Fila Letter II de Hombre</p>
+            <h5 class="card-title bg-light">$15.999</h5>
+            <div class="d-flex justify-content-center bg-light">
+              <a
+                target="_blank"
+                href="#"
+                class="btn btn-outline-info"
+                >Ver más</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="card col-3 p-1 mb-5 bg-light div1" style="width: 15rem">
+          <img
+            src="img/img-main/short.png"
+            class="card-img-top"
+            alt="Short Puma Sumer Graphic De Hombre"
+          />
+          <div class="card-body bg-light">
+            <p class="card-text bg-light">
+              Short Puma Sumer Graphic De Hombre
+            </p>
+            <h5 class="card-title bg-light">$16.899</h5>
+
+            <div class="d-flex justify-content-center bg-light">
+              <a
+                target="_blank"
+                href="#"
+                class="btn btn-outline-info"
+                >Ver más</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="card col-3 p-1 mb-5 bg-light div1" style="width: 15rem">
+          <img
+            src="img/img-main/river.png"
+            class="card-img-top"
+            alt="Camiseta adidas River Plate Visitante 21/22 De Niños"
+          />
+          <div class="card-body bg-light">
+            <p class="card-text bg-light">
+              Camiseta adidas River Plate Visitante 21/22 De Niños
+            </p>
+            <h5 class="card-title bg-light">$17.999</h5>
+            <div class="d-flex justify-content-center bg-light">
+              <a
+                target="_blank"
+                href="#"
+                class="btn btn-outline-info"
+                >Ver más</a
+              >
+            </div>
+          </div>
+        </div>
+      </article>
+      <article class="d-flex justify-content-center mb-5">
+        <button type="button" class="btn btn-info text-white">
+          Ver más de Ofertas
+        </button>
+      </article>
+    </section>
     <!-- SCRIPTS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
