--- a/proyecto_duo/pages/contacto.html
+++ b/proyecto_duo/pages/contacto.html
@@ -12,7 +12,7 @@
      <header>
          <nav class="navbar navbar-expand-lg bg-primary-subtle rounded-3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Proyecto BOOTSTRAP</a>
+                <a class="navbar-brand" href="../index.html">Proyecto BOOTSTRAP</a>
                 <button class="navbar-toggler bg-body-tertiary border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
