--- a/proyecto_grupal/pages/productoOferta.html
+++ b/proyecto_grupal/pages/productoOferta.html
@@ -31,7 +31,7 @@
             </li>
             <li class="nav-item dropdown">
             <li class="nav-item">
-              <a class="nav-link" href="#">Productos</a>
+              <a class="nav-link" href="./productos.html">Productos</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="./contacto.html" aria-expanded="false">
