--- a/proyecto_duo/index.html
+++ b/proyecto_duo/index.html
@@ -35,11 +35,7 @@
                 <a class="nav-link" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item dropdown">
-              <li class="nav-item">
-                <a class="nav-link" href="pages/productos.html">Productos</a>
+                <a class="nav-link" href="pages/perfil.html">Perfil</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -240,35 +236,97 @@
     <!-- ******** -->
     <!-- SECCIÓN OFERTAS -->
     <section class="container">
-      <h2 class="text-center p-3 mb-5 mt-3 fw-bolder bg-primary-subtle col-lg-6 mx-auto">Ofertas Destacadas</h2>
-      <article class="d-flex column row-md flex-wrap justify-content-evenly" id="ofertas-container">
-        <!-- OFERTAS -->
+      <h3 class="text-center p-3 mb-5 mt-3 text-white fw-bolder">Ofertas</h3>
+      <article class="d-flex column row-md flex-wrap justify-content-evenly">
+        <div class="card col-3 p-1 mb-5 bg-light div1" style="width: 15rem">
+          <img
+            src="img/img-main/top.png"
+            class="card-img-top"
+            alt="Top Salomon Cross Run De Mujer"
+          />
+          <div class="card-body bg-light">
+            <p class="card-text bg-light">Top Salomon Cross Run De Mujer</p>
+            <h5 class="card-title bg-light">$19.999</h5>
+
+            <div class="d-flex justify-content-center bg-light">
+              <a
+                href="#"
+                class="btn btn-outline-info"
+                >Ver más</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="card col-3 p-1 mb-5 bg-light div1" style="width: 15rem">
+          <img
+            src="img/img-main/buzo-fila.png"
+            class="card-img-top"
+            alt="Buzo Fila Letter II de Hombre"
+          />
+          <div class="card-body bg-light">
+            <p class="card-text bg-light">Buzo Fila Letter II de Hombre</p>
+            <h5 class="card-title bg-light">$15.999</h5>
+            <div class="d-flex justify-content-center bg-light">
+              <a
+                target="_blank"
+                href="#"
+                class="btn btn-outline-info"
+                >Ver más</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="card col-3 p-1 mb-5 bg-light div1" style="width: 15rem">
+          <img
+            src="img/img-main/short.png"
+            class="card-img-top"
+            alt="Short Puma Sumer Graphic De Hombre"
+          />
+          <div class="card-body bg-light">
+            <p class="card-text bg-light">
+              Short Puma Sumer Graphic De Hombre
+            </p>
+            <h5 class="card-title bg-light">$16.899</h5>
+
+            <div class="d-flex justify-content-center bg-light">
+              <a
+                target="_blank"
+                href="#"
+                class="btn btn-outline-info"
+                >Ver más</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="card col-3 p-1 mb-5 bg-light div1" style="width: 15rem">
+          <img
+            src="img/img-main/river.png"
+            class="card-img-top"
+            alt="Camiseta adidas River Plate Visitante 21/22 De Niños"
+          />
+          <div class="card-body bg-light">
+            <p class="card-text bg-light">
+              Camiseta adidas River Plate Visitante 21/22 De Niños
+            </p>
+            <h5 class="card-title bg-light">$17.999</h5>
+            <div class="d-flex justify-content-center bg-light">
+              <a
+                target="_blank"
+                href="#"
+                class="btn btn-outline-info"
+                >Ver más</a
+              >
+            </div>
+          </div>
+        </div>
       </article>
       <article class="d-flex justify-content-center mb-5">
-        <a href="./pages/productos.html" class="btn btn-info text-white">
-          Ver más de Productos
-        </a>
+        <button type="button" class="btn btn-info text-white">
+          Ver más de Ofertas
+        </button>
       </article>
     </section>
-    <section class="container my-2">
-      <img src="img/img-main/promo5.png" alt="banner promo lecoq sportif" width="100%" height="250px" class="img-fluid rounded-3">
-    </section>
-    <!-- SECCION PROMOS -->
-    <section class="container">
-      <h2 class="text-center p-3 mb-5 mt-3 fw-bolder bg-primary-subtle col-lg-6 mx-auto">Nuestras Promociones</h2>
-      <article class="d-flex column row-md flex-wrap justify-content-evenly" id="promos-container">
-        <!-- PROMOS -->
-      </article>
-    </section>
-    <section class="container my-2">
-      <img src="img/img-main/promo4.jpg" alt="banner promo lecoq sportif" width="100%" height="250px" class="img-fluid rounded-3">
-    </section>
-
-    <footer class="container bg-light-subtle py-3 text-center lead">
-      <p><span class="fw-bold">CILSA</span> &copy;| Todos los derechos reservados</p>
-    </footer>
     <!-- SCRIPTS -->
-    <script type="module" src="./js/script-main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
