--- a/proyecto_duo/pages/contacto.html
+++ b/proyecto_duo/pages/contacto.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Bootstrap / Duo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/general.css">
 </head>
-
-<body class="container">
+<body class="p-2">
     <!-- NAVBAR -->
-    <header>
-        <nav class="navbar navbar-expand-lg bg-primary-subtle rounded-3">
+     <header>
+         <nav class="navbar navbar-expand-lg bg-primary-subtle rounded-3">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Proyecto BOOTSTRAP</a>
-                <button class="navbar-toggler bg-body-tertiary border-0" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler bg-body-tertiary border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -27,68 +22,57 @@
                             <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                            <a class="nav-link" href="./perfil.html">Perfil</a>
                         </li>
                         <li class="nav-item dropdown">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Productos</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="./contacto.html" aria-expanded="false">
-                                Contacto
+                            <a class="nav-link" href="#" role="button" aria-expanded="false">
+                            Contacto
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-    </header>
-    <!-- ******** -->
+     </header>
+          <!-- ******** -->
 
-    <main class="container contact-form">
-        <section class="contact-image">
-            <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact" />
-        </section>
-        <form id="contact-form">
-            <h3>Déjanos tu mensaje</h3>
-            <section class="row d-flex flex-column gap-3 flex-md-row gap-md-0">
-                <article class="col-md-6 d-flex flex-column gap-3">
-                    <div class="form-group">
-                        <input type="text" name="nombre" class="form-control" placeholder="Tu Nombre *" value=""
-                            minlength="3" maxlength="50" required />
-                    </div>
-                    <div class="form-group">
-                        <input type="email" name="email" class="form-control" placeholder="Tu Email *" value=""
-                            minlength="10" maxlength="50" required />
-                    </div>
-                    <div class="form-group">
-                        <input type="tel" name="telefono" class="form-control" placeholder="Tu teléfono *" value=""
-                            minlength="6" maxlength="50" required />
-                    </div>
-                </article>
-                <article class="col-md-6">
-                    <div class="form-group">
-                        <textarea name="mensaje" class="form-control" placeholder="Tu mensaje *"
-                            style="width: 100%; height: 150px;" required maxlength="500" minlength="10"></textarea>
-                    </div>
-                </article>
+<main class="container contact-form">
+            <section class="contact-image">
+                <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
             </section>
-            <section class="btnContainer d-flex justify-content-center ">
-                <input type="submit" name="btnSubmit" class="btnContact" value="Enviar mensaje.." id="btn-submit" />
-            </section>
-        </form>
-    </main>
+            <form id="contact-form">
+                <h3>Déjanos tu mensaje</h3>
+               <section class="row d-flex flex-column gap-3 flex-md-row gap-md-0">
+                    <article class="col-md-6 d-flex flex-column gap-3">
+                        <div class="form-group">
+                            <input type="text" name="nombre" class="form-control" placeholder="Tu Nombre *" value="" minlength="3" maxlength="50" required />
+                        </div>
+                        <div class="form-group">
+                            <input type="email" name="email" class="form-control" placeholder="Tu Email *" value="" minlength="10" maxlength="50" required/>
+                        </div>
+                        <div class="form-group">
+                            <input type="tel" name="telefono" class="form-control" placeholder="Tu teléfono *" value="" minlength="6" maxlength="50" required/>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <div class="form-group">
+                            <textarea name="mensaje" class="form-control" placeholder="Tu mensaje *" style="width: 100%; height: 150px;" required maxlength="500" minlength="10"></textarea>
+                        </div>
+                    </article>
+                </section>
+                <section class="btnContainer d-flex justify-content-center ">
+                    <input type="submit" name="btnSubmit" class="btnContact" value="Enviar mensaje.." id="btn-submit" />
+                </section>
+            </form>
+</main>
 
-    <footer class="container bg-light-subtle py-3 text-center lead">
-        <p><span class="fw-bold">CILSA</span> &copy;| Todos los derechos reservados</p>
-    </footer>
+
+
+
 
     <!-- SCRIPTS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../js/script-form.js"></script>
 </body>
-
 </html>
